chore: cleanup, refactor, documentation
